Last Image Added

--- a/index.html
+++ b/index.html
@@ -505,6 +505,9 @@ this.modal.open(AnyView, {
             <a style="text-decoration:none;" href="https://twitter.com/imsinghk7" target="_blank">@imsinghk7</a>
           </h3>
         </section>
+        
+        <section data-background="img/rating.png">
+        </section>
 
 
       </div>
