npm install line added

--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@ this.modal.open(AnyView, {
         <section data-background="white">
           <p><code style="font-size: 1em;" class="ionic-blue">$ git clone https://github.com/driftyco/ionic2-starter</code></p>
           <p><code style="font-size: 1em;" class="ionic-blue">$ cd ionic2-starter</code></p>
+          <p><code style="font-size: 1em;" class="ionic-blue">$ npm install</code></p>
           <p><code style="font-size: 1em;" class="ionic-blue">$ gulp watch</code></p>
           <br/>
           <p class="ionic-blue">Boilerplate <strong>app structure</strong> ready for customization</p>
